# test-dependabot-with-poetry

./: pyproject.toml
