[tool.poetry]
name = "test-dependabot-with-poetry"
version = "0.0.0"
description = "Test Dependabot with Poetry"
authors = ["Yaraslau Zhylko <YaraslauZhylko@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.15"
arrow = "^0.10.0"

[tool.poetry.dev-dependencies]
black = {version = "==22.10.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
