[tool.poetry]
name = "test-dependabot-with-poetry"
version = "0.0.0"
description = "Test Dependabot with Poetry"
authors = ["Yaraslau Zhylko <YaraslauZhylko@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
arrow = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
